--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,7 +1,9 @@
 {
-    "functions": {
-      "api/*.php": {
-        "runtime": "vercel-php@0.5.2"
-      }
-    }
+  "version": 2,
+  "builds": [
+    { "src": "index.php", "use": "@vercel/php" }
+  ],
+  "env": {
+    "PHP_VERSION": "8.0"
   }
+}
