--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,9 +1,10 @@
 {
-  "version": 2,
-  "builds": [
-    { "src": "index.php", "use": "@vercel/php" }
-  ],
-  "env": {
-    "PHP_VERSION": "8.0"
-  }
+  "functions": {
+    "api/*.php": {
+      "runtime": "vercel-php@0.5.2"
+    }
+  },
+  "routes": [
+    { "src": "/(.*)",  "dest": "/api/index.php" }
+  ]
 }
